--- a/client/index.html
+++ b/client/index.html
@@ -29,17 +29,18 @@
                 <label for="value" class="mr-3">Value</label>
                 <input type="text" class="form-control" id="value" v-model="form.value">
             </div>
-            <button class="btn btn-primary" type="submit">Enregistrer</button>
+            <button class="btn btn-primary" type="submit" :disabled="!canCreate">Enregistrer</button>
         </form>
 
         <!-- if there's anything -->
         <div v-if="contacts.length">
             <div class="card mb-3" v-for="contact in contacts">
                 <div class="card-body">
-                    <h5 class="card-title">{{contact.name}}</h5>
+                    <h5 class="card-title" :style="{color: contact.marked ? 'red' : 'black'}">{{contact.name}}</h5>
                     <p class="card-text">{{contact.value}}</p>
-                    <button class="btn btn-primary" @click="markContact(contact.id)">Marquer</button>
-                    <button class="btn btn-danger">Supprimer</button>
+                    <button class="btn btn-primary" @click="markContact(contact.id)"
+                        :disabled="contact.marked">Marquer</button>
+                    <button class="btn btn-danger" @click="removeContact(contact.id)">Supprimer</button>
                 </div>
             </div>
         </div>
